# gcp-billing-alert

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh
.github/workflows/: rust.yml
src/: bigquery.rs  config.rs  discord.rs  lib.rs  main.rs
tests/: bigquery_test.rs  discord_test.rs
